[Docs][blog] Add full i18n translations for all blog posts
Translate 4 blog posts across all 9 non-default locales:
- blog/ source: converted to English (defaultLocale)
- zh-cn, ja, ko, es, pt-BR, de, fr, vi: new translations
- Removed redundant i18n/en/ copies
- Fixed ja frontmatter (authors format)

--- a/blog/2023/07-22.md
+++ b/blog/2023/07-22.md
@@ -1,86 +1,86 @@
 ---
 slug: hex-school-node
-title: 'HexSchool Node.js 企業專班'
+title: 'HexSchool Node.js Enterprise Course'
 authors: wuzhe0912
 tags: [Node.js]
 ---
 
-完成 HexSchool Node.js 企業專班後，一些粗淺的想法與反思。
+Some rough thoughts and reflections after completing the HexSchool Node.js Enterprise Course.
 
 <!--truncate-->
 
-## 為什麼選擇這門課程？解決什麼問題？
+## Why did I take this course? What problem was I trying to solve?
 
-這是一門價格不菲的課程，同時考慮到六角的屬性(基於商業考量，無法把報名者拒之門外)，因此只能將課程內容設計為偏簡單。
+This is an expensive course. Given HexSchool's nature (they can't turn away paying students for business reasons), the course content has to be designed on the easier side.
 
-從這些條件來看，報名這門課程似乎很不划算，但實務上還是可以考慮以下面向：
+With those conditions, signing up might seem like a bad deal. But in practice, there are a few angles worth considering:
 
-### 團隊合作
+### Teamwork
 
-因為課程從一開始就必需分組合作開發，考慮到報名者多是前端出身，大多沒有後端實作經驗，所以對我們而言可以練習後端開發之間的溝通與推進。
+The course requires group collaboration from the start. Since most participants come from frontend backgrounds and have little to no backend experience, it's a chance to practice communication and coordination in backend development.
 
-從另一個面向講，這些合作的夥伴，未來彼此之間也能互相幫忙，算是一種替彼此建立人脈資源的方式。
+From another angle, the people you collaborate with can become future connections who help each other out -- it's a way to build your professional network.
 
-### 沉沒成本
+### Sunk Cost
 
-如前述所說，這是一門蠻貴的課程，即使你是懶人如我，如果不希望直接虧損掉這筆錢，必然要在下班時花費心力去追專案進度，力求在 deadline 前完成專案，這樣才能保證不虧損，某種程度上也幫助你達到自律的目標。
+As I mentioned, this is a pricey course. Even if you're as lazy as I am, if you don't want that money to go to waste, you'll have to put in effort after work to keep up with the project and hit the deadline. In a way, it forces you to be disciplined.
 
-### 新的視角
+### New Perspectives
 
-因為整個專案是從設計發想到開發一條龍完成，雖然客觀來說整體內容是蠻粗淺的，但還是可以讓所有成員實際跑過一遍 PM, UI/UX, 前端, 後端的流程，對於未來的工作也能有一些新的視角。
+The entire project goes from design ideation to development, end to end. Objectively, the content is fairly surface-level, but it still lets every member walk through the PM, UI/UX, frontend, and backend workflow at least once. That gives you some new perspectives for future work.
 
-## 課程內容
+## Course Content
 
-課程內容的部分，扣除基本的 `MongoDB` 指令操作還有 `Node.js` 的 `API` 實作，較有價值的部分，個人認為會是三方服務相關的串接，像是三方登入與金流等，畢竟這部分比較死板，需要花時間查閱對方的文件，才能完成串接。有教學的話，等於是省下了查閱文件的時間。
+Beyond the basics of `MongoDB` commands and `Node.js` API implementation, the most valuable part, in my opinion, was the integration with third-party services -- things like third-party login and payment processing. These are tedious by nature and require time spent digging through the provider's documentation, so having structured teaching saves you that effort.
 
-另外，課程內中的部分設計仍以 `MVC` 為範例，需要團隊成員在實作專案時，自己進行前後端分離，這部分也是需要花時間去思考的。
+Also, some parts of the course still use `MVC` as the example architecture, so the team had to figure out frontend-backend separation on their own during the project. That's another area that takes time and thought.
 
-有些課程內容算是委外請人直播教學的性質，因此可能會出現一些落差，譬如以這次的單元測試教學範例，是提供給前端的，所以這部分如果要練習後端的單元測試，還是只能仰賴團隊自己。
+Some sessions were essentially outsourced to guest instructors for live teaching, which can create gaps. For example, the unit testing session provided examples for frontend only, so if you wanted to practice backend unit testing, you were on your own.
 
-## 專案實作(超主觀心得)
+## Project Work (Very Subjective Take)
 
-專案實作是個人認為這門課程最有價值的部分，而重中之重，則是整個團隊內部的合作與規劃。
+The project work is what I consider the most valuable part of this course, and the key to it is the team's internal collaboration and planning.
 
-### 分組前請誠實以對
+### Be honest before forming teams
 
-團隊分組前，會有個人能力評估，如果是不熟悉的領域，請誠實以對，否則如果團隊實力落差太大，很容易產生嚴重分歧，導致專案無法順利進行。
+Before teams are formed, there's a self-assessment of your abilities. If you're unfamiliar with a domain, be honest about it. If the skill gap within a team is too large, it easily leads to serious disagreements, and the project falls apart.
 
-### 開發預留緩衝時間
+### Build in buffer time for development
 
-因為多數人是以前端身份進入後端開發，有很多以前，前端不會碰到的眉角會拖累開發速度，譬如金流串接後，必然要處理訂單問題，而訂單本身又會涉及到交易時間等問題。
+Since most people are frontend developers stepping into backend work, there are many gotchas that slow things down -- things frontend devs never had to worry about before. For example, after integrating payment processing, you inevitably have to handle orders, and orders involve transaction timestamps and other complexities.
 
-這對前端來說，以前不太可能會考慮到這部分問題，畢竟都是串接 API 和列表展示與操作，但對於後端來說，這些問題都是必須要考慮到的。
+For frontend devs, these issues were never on the radar before. It was always just calling APIs and rendering lists. But on the backend side, these are things you absolutely have to think about.
 
-### 以專案上線為目標
+### Aim for a shipped project
 
-務必請認真考慮到以下幾點
+Please seriously consider these points:
 
-- 團隊成員多要上班，只能投入有限時間(你無法預判團隊成員工作是否會有緊急需求壓力、加班)
-- deadline 時間非常緊迫，實際給的開發時間有限
-- 多數成員不可能有後端經驗，必然要花時間踩雷
+- Team members all have day jobs and can only invest limited time (you can't predict if someone will have urgent work demands or overtime)
+- The deadline is very tight, with limited actual development time
+- Most members won't have backend experience, so there will inevitably be time spent hitting walls
 
-所以第一階段的目標，是以開發出一個堪用的作品為目標，而不是一個完美的作品，請不要在這個階段思考太多架構、優化、測試等等，這些都是後續的事情。
+So the first-phase goal should be building something that works, not something perfect. Don't overthink architecture, optimization, or testing at this stage -- those come later.
 
-如果過度追求完美，除了會造成開發時間卡住外，更可怕的是，可能會造成團隊分裂(潛在的各種衝突，尤其是你無法判斷團隊成員是否面臨白天工作壓力)，一但團隊分裂，專案 94.87% 就瀕臨失敗了。先做出一個醜陋但能跑的功能，可以很大程度激勵彼此的信心。
+If you chase perfection, you'll not only get stuck on development time, but worse, you might cause the team to fracture (hidden conflicts everywhere, especially when you can't tell if teammates are dealing with work pressure during the day). Once a team fractures, the project is 94.87% dead. Shipping an ugly but functional feature goes a long way in boosting everyone's confidence.
 
-尤其要避免無限擴張團隊採用的技術，以前端來說，不應該出現同時採用 `React`、`Vue` 這種雙框架的狀況，即使團隊中有人非常擅長某一個框架，但不代表其他人也能迅速學習並用於開發。
+In particular, avoid endlessly expanding the team's tech stack. On the frontend side, you should never end up using both `React` and `Vue` at the same time. Even if someone on the team is great with one framework, that doesn't mean others can pick it up quickly enough to contribute.
 
-### 擴充與優化
+### Expansion and Optimization
 
-當專案完成第一個角色功能後，通常這時候可以理解為第一階段已吿終，除了可以喘一口氣外，還能開始思考其他功能的開發，包含一些可能你想實作的技術或優化體驗等等。
+After the project completes its first role-based feature, you can consider the first phase done. Besides taking a breather, you can start thinking about additional features, including things you want to try technically or UX improvements.
 
-以我們專案為例，就是逐步加入 `websocket` 訊息串流，`PWA`、動畫，簽到系統等，更大程度去豐富整個網站的內容。
+For our project, we gradually added `websocket` messaging, `PWA` support, animations, a check-in system, and more, enriching the overall site.
 
-## 結語
+## Final Words
 
-最後附上我們本次專案實作完成的前後台部署網址與 Repo，歡迎大家參考。
+Here are the deployed URLs and repos for our project. Feel free to check them out.
 
-### 前台(Client)
+### Client
 
 - [Live Host](https://true-salary-story-client.vercel.app/)
 - [Repo Link](https://github.com/North-Cat/true-salary-story-client)
 
-### 後台(Admin)
+### Admin
 
 ```md
 <!-- test account & password -->
@@ -92,6 +92,6 @@ password : 12345678
 - [Live Host](https://north-cat.github.io/true-salary-story-admin/#/login)
 - [Repo Link](https://github.com/North-Cat/true-salary-story-admin)
 
-## 相關連結
+## Related Links
 
 [關於我成為了 2023 Node.js 軟體工程師企業專題班教練這件事](https://israynotarray.com/learnexp/20230701/2021952545/)
