--- a/blog/2023/12-31.md
+++ b/blog/2023/12-31.md
@@ -1,183 +1,183 @@
 ---
 slug: 2023-year-end-summary
-title: '2023 年末問自己的 40 個問題'
+title: '40 Questions to Ask Myself at the End of 2023'
 authors: wuzhe0912
 tags: [40-Questions, Personal Growth, Year-End Summary]
 ---
 
-2023 年末總結，透過對自己提問，反思自己的成長概況。
+A year-end summary for 2023 -- reflecting on my growth by asking myself questions.
 
 <!--truncate-->
 
-## 1. 今年你做了哪些過去從未嘗試過的事？
+## 1. What did you do this year that you've never done before?
 
-- 全遠端工作
-- 生育了一個孩子，從陪產到生產，最終再到產後育兒，艱辛萬分
+- Worked fully remote.
+- Had a child. From being there for the labor to the birth itself, and then postpartum childcare -- incredibly tough.
 
-## 2. 你有遵守年初設定的目標嗎？
+## 2. Did you keep your New Year's resolutions?
 
-- [x] 雖然沒有在工作上觸碰到後端開發，但是有在和夥伴的團隊中，以後端的身份參與開發，並且有實際的產出，算是有達成年初的目標。
-- [ ] 建立個人品牌，這個目標沒有達成，一方面是自己懶散，另一方面是下半年的時間都花在育兒上。
+- [x] Although I didn't get to do backend work at my job, I did participate as a backend developer in a side project with teammates, and had actual output. So I'd say I met that goal.
+- [ ] Building a personal brand -- didn't happen. Partly because I'm lazy, and partly because the second half of the year was consumed by childcare.
 
-## 3. 身邊有人生孩子嗎？
+## 3. Did anyone close to you give birth?
 
-- 有，我們家也生了一個。
+- Yes, we did -- our family had a baby.
 
-## 4. 身邊有人過世了嗎？
+## 4. Did anyone close to you die?
 
-- 沒有。
+- No.
 
-## 5. 今年你去了哪些城市/州/國家？
+## 5. What cities/states/countries did you visit this year?
 
-在年末，和妻子去了日本東京旅遊。
+At the end of the year, my wife and I traveled to Tokyo, Japan.
 
-## 6. 明年你希望擁有，而今年沒有的？
+## 6. What do you wish you had next year that you didn't have this year?
 
-- 個人品牌，無論如何今年一定要開工嘗試做起來。
-- 減肥，雖然育兒卡掉很多時間，但為了自己的健康，這是無可迴避的事情。
+- A personal brand. No matter what, I have to start building one this year.
+- Weight loss. Even though childcare eats up a lot of time, for my own health, this can't be avoided.
 
-## 7. 哪個日子將永遠刻在你的記憶裡？為什麼？
+## 7. What date will remain etched in your memory forever? Why?
 
-- 6/27，陪伴妻子生產的難熬，以及兒子的誕生。
+- June 27th. The grueling experience of being there for my wife's labor, and the birth of my son.
 
-## 8. 今年你最大的成就是什麼？
+## 8. What was your biggest achievement this year?
 
-- 上台報告自己組別的 Side Project。
-- 成為父親(即使這個痛苦遠超我的想像)。
+- Presenting our team's side project on stage.
+- Becoming a father (even though the hardship far exceeded my imagination).
 
-## 9. 最大的失敗是什麼？
+## 9. What was your biggest failure?
 
-- 本來期望能穩定的全遠端工作，結果不到一年公司就開始裁員，雖然新工作很快就取得，但卻非遠端工作，不得不面臨再次搬遷回台北的問題。
+- I was hoping to have a stable remote job, but the company started layoffs within a year. I found a new job quickly, but it wasn't remote, so I had to face moving back to Taipei.
 
-## 10. 面臨了哪些困難？
+## 10. What difficulties did you face?
 
-- 遠端工作噴了，不得不重回進辦公室的工作模式。
-- 育兒時消耗掉的專注力與精神，以及佔用的時間，還有各種出行時的不便。
+- Lost my remote job and had to go back to working in an office.
+- The mental energy and focus drained by childcare, the time it takes up, and the inconvenience of going anywhere with a baby.
 
-## 11. 有生病或受傷嗎？
+## 11. Did you get sick or injured?
 
-- 一家三口先後確診。
+- Our whole family of three got COVID, one after another.
 
-## 12. 今年買的最好的東西是什麼？
+## 12. What was the best thing you bought this year?
 
-- 送給朋友們的伴手禮。
+- Souvenirs I gave to friends.
 
-## 13. 誰的行為值得慶祝？
+## 13. Whose behavior deserves celebrating?
 
-- 妻子的勇氣，在萬般痛苦的情況下，能夠順利生產完成。
+- My wife's courage -- she managed to get through the delivery despite immense pain.
 
-## 14. 誰的行為讓你感到震驚？
+## 14. Whose behavior shocked you?
 
-- 當得知自己被裁員時。
+- When I found out I was being laid off.
 
-## 15. 你的大部分錢花在哪裡？
+## 15. Where did most of your money go?
 
 - My son.
 
-## 16. 對什麼非常非常非常興奮？
+## 16. What were you really, really, really excited about?
 
-- 和妻子的日本行。
+- The trip to Japan with my wife.
 
-## 17.有什麼歌會讓你永遠記得今年？
+## 17. What song will always remind you of this year?
 
-- 沒有特別 follow 什麼歌曲。
+- I didn't particularly follow any songs.
 
-## 18.與去年這個時候相比，你現在是更快樂還是更悲傷？更瘦還是更胖？更富有還是更貧窮？
+## 18. Compared to this time last year, are you happier or sadder? Thinner or fatter? Richer or poorer?
 
-- 相對來說，更抑鬱了一些，畢竟養兒這件事的困難度，遠超過我們夫妻的想像。
-- 體重沒變化，但還是得想辦法減下去。
-- 雖然今年花費高出非常多，但意料之外，年度總結時，總資產的數字還是成長了一定比例。
+- A bit more down, to be honest. Raising a child turned out to be far harder than my wife and I expected.
+- No change in weight, but I still need to figure out how to lose some.
+- Despite spending way more this year, surprisingly, when I tallied things up at year-end, my total assets had still grown by a decent percentage.
 
-## 19. 你希望做更多的是什麼？
+## 19. What do you wish you'd done more of?
 
-- 穩健的提升個人專業技能，確保自己的市場競爭力。
-- 持續投資股市，參與市場。
-- 外語能力。
-- 重拾運動習慣。
+- Steadily improving my professional skills to stay competitive in the market.
+- Continuing to invest in the stock market and stay engaged.
+- Foreign language skills.
+- Getting back into a regular exercise routine.
 
-## 20. 你希望做更少的是什麼？
+## 20. What do you wish you'd done less of?
 
-- 盡量保護自己的專注力。
-- 少喝含糖飲料。
+- I want to protect my focus better.
+- Drink fewer sugary beverages.
 
-## 21. 你是怎麼度過假期的？
+## 21. How did you spend the holidays?
 
-- 國內，新北撒旦城。
-- 國外，日本東京。
+- Domestically: Xinbei Satan City (amusement park).
+- Internationally: Tokyo, Japan.
 
-## 22. 今年你戀愛了嗎？
+## 22. Did you fall in love this year?
 
-- 結婚了，自然得和妻子戀愛。
+- I'm married, so naturally I'm in love with my wife.
 
-## 23. 有任何人是今年討厭，但去年沒有的？
+## 23. Is there anyone you disliked this year that you didn't last year?
 
-- 這點還好。
+- Not really.
 
-## 24. 你最喜歡的節目是什麼？
+## 24. What was your favorite show?
 
-- 《freeCodeCamp》。
-- 《渤海小吏》。
+- *freeCodeCamp*.
+- *渤海小吏* (a Chinese history channel).
 
-## 25. 今年你讀的最好的書是什麼？
+## 25. What was the best book you read this year?
 
-- 《軟技能：代碼之外的生存指南》。
+- *Soft Skills: The Software Developer's Life Manual*.
 
-## 26. 今年你最大的音樂發現是什麼？
+## 26. What was your biggest musical discovery this year?
 
-- 發現伍佰有些歌的歌詞，相當有意涵。
+- I realized that some of Wu Bai's song lyrics are surprisingly meaningful.
 
-## 27. 你最喜歡的電影是哪部？
+## 27. What was your favorite movie?
 
-- 《蒼鷺與少年》。
+- *The Boy and the Heron*.
 
-## 28. 你最喜歡的一餐是什麼？
+## 28. What was your favorite meal?
 
-- 九日味噌燒肉丼。
+- Kunika Miso Grilled Beef Rice Bowl.
 
-## 29. 你想要什麼並且得到了？
+## 29. What did you want and get?
 
-- 在疫情過後，能夠和妻子出國旅遊，確實達成了。
+- After COVID restrictions ended, my wife and I were able to travel abroad, and we did.
 
-## 30. 你想要什麼但沒有得到？
+## 30. What did you want and not get?
 
-- 希望能持續找到遠端工作，可惜暫時沒有合適的機會。
+- I was hoping to keep finding remote work, but there weren't any suitable opportunities at the time.
 
-## 31. 你生日那天做了什麼？
+## 31. What did you do on your birthday?
 
-- 跟老婆孩子去簡單吃了火鍋。
+- Went out for a simple hot pot meal with my wife and son.
 
-## 32. 有什麼一件事如果發生，會讓你的一年更加滿意？
+## 32. What one thing would have made your year more satisfying?
 
-- 如果能有更多的遠端工作可供選擇，那就太好了。
+- If there had been more remote work opportunities to choose from, that would have been great.
 
-## 33. 你今年的個人時尚風格是怎樣的？
+## 33. What was your personal fashion style this year?
 
-- 走的就是舒適與簡便，吊嘎，運動短褲，白色布鞋。
+- Comfort and simplicity. Tank tops, athletic shorts, white sneakers.
 
-## 34. 是什麼讓你保持理智？
+## 34. What kept you sane?
 
-- 與妻子的討論和反思。
+- Discussions and reflections with my wife.
 
-## 35. 你最欣賞哪位名人 / 公眾人物？
+## 35. Which celebrity/public figure do you admire most?
 
-- Sam Altman
+- Sam Altman.
 
-## 36. 什麼政治議題讓你最激動？
+## 36. What political issue stirred you up the most?
 
-- 台灣有機會走出兩黨政治，雖然可能還有很長的路。
+- Taiwan has a chance to move beyond two-party politics, though the road is probably still long.
 
-## 37. 你最掛念的人是誰？
+## 37. Who did you miss the most?
 
-- 妻與子。
+- My wife and son.
 
-## 38. 今年你認識的最好的新朋友是誰？
+## 38. Who was the best new person you met this year?
 
-- Sherry。
+- Sherry.
 
-## 39. 今年你學到的最寶貴的人生課程是什麼？
+## 39. What was the most valuable life lesson you learned this year?
 
-- 如果要預估一件超出舒適圈的事情難易度時，即使用 5-10 倍的難度來評估也不為過，否則一但深陷其中，你才會發現自己進退兩難。
+- When estimating the difficulty of something outside your comfort zone, even multiplying it by 5 to 10 times wouldn't be an overestimate. Otherwise, once you're deep in it, you'll realize you're stuck with no easy way forward or back.
 
-## 40. 有什麼名言概括了你的這一年？
+## 40. What quote sums up your year?
 
-- 雖然期許自己"勇敢踏出舒適圈"，但每一步都備感艱辛，果然這就是人生。
+- I kept telling myself to "be brave and step out of my comfort zone," but every step was painful. I guess that's just life.
