--- a/blog/2024/08-11.md
+++ b/blog/2024/08-11.md
@@ -1,48 +1,48 @@
 ---
 slug: mid-year-reflection-2024
-title: '2024 年中反思'
+title: '2024 Mid-Year Reflection'
 authors: wuzhe0912
 tags: [Personal Growth]
 ---
 
-時間流逝的速度真的超乎想像，轉瞬間 2024 又過了一半，但個人感覺自律程度沒有改善，有達成的事項乏善可談，但還是略作書陳。
+Time really flies faster than you'd expect. Half of 2024 is already gone, but I don't feel like my self-discipline has improved much. There's not a lot to show for it, but I'll jot down some notes anyway.
 
 <!--truncate-->
 
 ## Company
 
-2023 年末時，因為原本任職遠端職缺的公司業務減少，隨即裁撤前端部門一半的人員，不幸我也是其中一員，不得不重新進入市場尋找下一個飯碗。
+At the end of 2023, the company where I had a remote position saw a decline in business and promptly laid off half the frontend department. Unfortunately, I was one of them, so I had to get back on the market and find my next paycheck.
 
-最終選定了一間台北公司，是的，這是一份沒有提供遠端工作的公司，自然得重回通勤的狀況，隨之而來就是成本的劇增，必須攜帶妻與子重新返回台北租屋生活與工作。
+I ended up at a company in Taipei. Yes, it didn't offer remote work, so I was back to commuting. That meant a huge jump in costs -- I had to bring my wife and son back to Taipei to rent a place and settle in for work.
 
-每天單程通勤 30 到 60 分鐘，來回將近兩小時，再加上台北的租屋和育兒開銷，跟之前遠端時期的生活品質相比，落差蠻大的。回到家後基本上也沒什麼餘力做自己的事，多數時間都在顧小孩。
+A one-way commute of 30 to 60 minutes each day, nearly two hours round trip. Add in Taipei's rent and childcare expenses, and the quality of life compared to the remote work era was a massive downgrade. By the time I got home, I had almost no energy left for my own stuff -- most of my time went to taking care of the kid.
 
-## 技術面
+## Technical Side
 
-雖然嘴上說沒什麼成長，但回頭整理一下，這半年多還是有碰到一些東西：
+Even though I keep saying I haven't grown much, looking back, I did touch on a few things over these six months:
 
-### 直播管理系統重構
+### Live Streaming Admin System Refactor
 
-獨立接手並重構直播後台管理系統，改善操作流程與頁面載入效能。新增即時預覽功能與主播照片縱橫比設定，讓現場營運人員操作更順暢。最終把頁面響應速度提升了 40%。
+I independently took over and refactored the live streaming backend management system, improving the workflow and page load performance. Added real-time preview functionality and streamer photo aspect ratio settings so on-site operations staff could work more smoothly. In the end, I improved page response speed by 40%.
 
-### 遊戲語音優化
+### Game Voice Integration Optimization
 
-重構遊戲前端語音整合方法，從靜態檔案匯入改為動態檔名獲取。原本新增一組語音檔案要花 1-2 天的開發時間，改完之後縮短到 2 小時左右，效率提升約 90%。也順便建立了標準化流程，讓後續維護的人能自己搞定。
+Refactored the game frontend's voice integration approach, switching from static file imports to dynamic filename fetching. Previously, adding a new set of voice files took 1-2 days of dev time; after the refactor, it was down to about 2 hours -- roughly a 90% efficiency improvement. I also set up a standardized process so future maintainers could handle it on their own.
 
-### 元件庫建置
+### Component Library Setup
 
-協助重構遊戲後台系統，透過 `Storybook` 建立共用元件庫與開發文件，算是第一次比較完整地跑過元件庫的建置流程。
+Helped refactor the game backend system by building a shared component library and dev documentation with `Storybook`. It was my first time going through a relatively complete component library setup process.
 
 ## Personal Brand
 
-報名了一門媒體語音課程，原本打算強制自己進行錄影教學，結果跟 2023 一樣，又拖延了。兩年了，這個目標依然停在原地，只能說拖延症是真的很頑強。
+I signed up for a media and voice course, planning to force myself into recording video tutorials. But just like 2023, I procrastinated again. Two years in, this goal is still stuck at the starting line. Procrastination really is stubborn.
 
-## 生活
+## Life
 
-坦白說，這半年最大的感受不是技術上的突破，而是育兒的疲憊。小孩越來越大，需要的注意力和陪伴時間也越來越多，加上通勤消耗的體力，下班後的時間幾乎都被佔滿了。
+Honestly, the biggest feeling of this half-year wasn't any technical breakthrough -- it was the exhaustion from parenting. The kid is growing up, needing more attention and time, and with the energy drained by commuting, my after-work hours were almost entirely taken up.
 
-未來期望能盡量以遠端或混合制工作為主，進而有朝一日能擺脫[特定城市的限制](https://amaca.substack.com/p/how-to-become-a-millionaire-without)。
+Going forward, I hope to prioritize remote or hybrid work, and eventually break free from [being tied to a specific city](https://amaca.substack.com/p/how-to-become-a-millionaire-without).
 
-## 後記
+## Postscript
 
-七月底離開了這間公司，拿到一份全遠端的工作，薪水也更好。算是用半年的通勤換回了一個還不錯的結果。接下來希望能趁著遠端的彈性，把一直拖延的事情真正動起來。
+At the end of July, I left that company and landed a fully remote position with better pay. Half a year of commuting traded for a pretty decent outcome. Now I'm hoping to take advantage of the flexibility that remote work offers and actually start doing the things I've been putting off.
