--- a/blog/2024/12-31.md
+++ b/blog/2024/12-31.md
@@ -1,179 +1,179 @@
 ---
 slug: 2024-year-end-summary
-title: '2024 年末問自己的 40 個問題'
+title: '40 Questions to Ask Myself at the End of 2024'
 authors: wuzhe0912
 tags: [40-Questions, Personal Growth, Year-End Summary]
 ---
 
-2024 年末總結，延續去年的格式，再次透過對自己提問，反思這一年的成長概況。
+A year-end summary for 2024. Continuing last year's format, reflecting on the year by asking myself questions once again.
 
 <!--truncate-->
 
-## 1. 今年你做了哪些過去從未嘗試過的事？
+## 1. What did you do this year that you've never done before?
 
-- 參加六角的家教班課程，開始真正意義上的錄影教學和試教。拖延了兩年的事情，總算在今年邁出了第一步。
-- 搬回台北時，找了一間靠山的租屋。每天早上能看到山景這件事本身很舒服，但通勤的痛苦完全蓋過了那份愜意，半年後就離開了。
+- Joined HexSchool's tutoring program and actually started recording teaching videos and doing trial lectures. After procrastinating for two years, I finally took the first step.
+- When I moved back to Taipei, I found a rental place near the mountains. Waking up to a mountain view every morning was nice in itself, but the misery of commuting completely overshadowed that comfort. I left after six months.
 
-## 2. 你有遵守年初設定的目標嗎？
+## 2. Did you keep your New Year's resolutions?
 
-年初根本沒有設定目標，因為忙著找工作，整個人處於緊迫狀態。硬要說的話，活下來就是目標。
+I didn't even set goals at the start of the year -- I was too busy looking for a job and in survival mode. If I had to name one, staying alive was the goal.
 
-## 3. 身邊有人生孩子嗎？
+## 3. Did anyone close to you give birth?
 
-沒有。
+No.
 
-## 4. 身邊有人過世了嗎？
+## 4. Did anyone close to you die?
 
-沒有。
+No.
 
-## 5. 今年你去了哪些城市/州/國家？
+## 5. What cities/states/countries did you visit this year?
 
-哪裡都沒去。這一年過得太緊湊了，沒有餘力規劃旅行。
+Nowhere. This year was too hectic to plan any trips.
 
-## 6. 明年你希望擁有，而今年沒有的？
+## 6. What do you wish you had next year that you didn't have this year?
 
-- 更好的生活品質，不只是賺錢和育兒的循環。
-- 個人品牌真正啟動，不能再拖了，已經第三年了。
-- 技術轉型，往 Software / Product Engineer 的方向走。
+- A better quality of life -- not just the cycle of making money and raising a kid.
+- Actually launching my personal brand. I can't keep putting it off; this is the third year now.
+- A career pivot toward Software / Product Engineer.
 
-## 7. 哪個日子將永遠刻在你的記憶裡？為什麼？
+## 7. What date will remain etched in your memory forever? Why?
 
-七月底離開台北公司、拿到全遠端 offer 的那天。半年的通勤總算換回了一個結果。
+The day at the end of July when I left the Taipei company and got the fully remote offer. Half a year of commuting finally paid off.
 
-## 8. 今年你最大的成就是什麼？
+## 8. What was your biggest achievement this year?
 
-- 下半年成功轉回全遠端工作，薪水也更好。
-- 參加六角家教班，開始錄影教學和試教前端課程，這對一直拖延的我來說算是很大的突破。
-- 在那間沒什麼制度的公司裡，遇到了一群不錯的前端同事，成為朋友。
+- Successfully switched back to fully remote work in the second half of the year, with better pay.
+- Joined HexSchool's tutoring program and started recording teaching videos and doing trial frontend lectures. For someone who's been procrastinating on this for years, that was a real breakthrough.
+- At that company with barely any structure, I met a group of solid frontend colleagues who became friends.
 
-## 9. 最大的失敗是什麼？
+## 9. What was your biggest failure?
 
-個人品牌依然沒有具體產出。雖然有開始試教，但還是停留在「練習」階段，沒有真正面向公眾。
+My personal brand still has no concrete output. I did start doing trial teaching, but it's still in the "practice" phase -- nothing public-facing.
 
-## 10. 面臨了哪些困難？
+## 10. What difficulties did you face?
 
-- 上半年帶著妻子和小孩搬回台北，租屋成本劇增，通勤消耗體力和時間。
-- 小孩一開始送去托嬰，但實在太常生病，後來只能放棄，改找保母。幸運的是，找到了一位很不錯的保母。
+- In the first half of the year, I moved back to Taipei with my wife and son. Rent costs skyrocketed, and commuting drained both my energy and time.
+- We sent our son to daycare at first, but he kept getting sick so often that we gave up and found a nanny instead. Fortunately, we found a really good one.
 
-## 11. 有生病或受傷嗎？
+## 11. Did you get sick or injured?
 
-小孩生病的頻率倒是蠻高的。
+The kid got sick pretty frequently.
 
-## 12. 今年買的最好的東西是什麼？
+## 12. What was the best thing you bought this year?
 
-沒有特別印象深刻的。
+Nothing particularly memorable.
 
-## 13. 誰的行為值得慶祝？
+## 13. Whose behavior deserves celebrating?
 
-妻子在這一年承受了太多，搬家、育兒、適應新環境，辛苦了。
+My wife endured so much this year -- moving, childcare, adapting to a new environment. She worked really hard.
 
-## 14. 誰的行為讓你感到震驚？
+## 14. Whose behavior shocked you?
 
-沒有特別的。
+Nothing in particular.
 
-## 15. 你的大部分錢花在哪裡？
+## 15. Where did most of your money go?
 
-台北的房租和小孩。跟去年一樣，My son 依然是最大支出。
+Taipei rent and the kid. Same as last year -- my son is still the biggest expense.
 
-## 16. 對什麼非常非常非常興奮？
+## 16. What were you really, really, really excited about?
 
-拿到全遠端 offer 的那一刻。
+The moment I got the fully remote offer.
 
-## 17. 有什麼歌會讓你永遠記得今年？
+## 17. What song will always remind you of this year?
 
-沒有特別 follow 什麼歌曲。
+I didn't particularly follow any songs.
 
-## 18. 與去年這個時候相比，你現在是更快樂還是更悲傷？更瘦還是更胖？更富有還是更貧窮？
+## 18. Compared to this time last year, are you happier or sadder? Thinner or fatter? Richer or poorer?
 
-差不多。生活沒有戲劇性的變化，就是在穩定和疲憊之間反覆。
+About the same. No dramatic changes in life -- just oscillating between stability and exhaustion.
 
-## 19. 你希望做更多的是什麼？
+## 19. What do you wish you'd done more of?
 
-- 個人品牌的產出，不管是影片還是文字。
-- 技術深度，不只是完成工作需求，而是理解底層。
-- 運動。
+- Personal brand output, whether videos or writing.
+- Technical depth -- not just completing work tasks, but understanding the fundamentals.
+- Exercise.
 
-## 20. 你希望做更少的是什麼？
+## 20. What do you wish you'd done less of?
 
-- 無意義的焦慮。
-- 拖延。
+- Pointless anxiety.
+- Procrastination.
 
-## 21. 你是怎麼度過假期的？
+## 21. How did you spend the holidays?
 
-在家帶小孩。
+At home with the kid.
 
-## 22. 今年你戀愛了嗎？
+## 22. Did you fall in love this year?
 
-跟妻子維持一樣的節奏。
+My wife and I kept our usual rhythm.
 
-## 23. 有任何人是今年討厭，但去年沒有的？
+## 23. Is there anyone you disliked this year that you didn't last year?
 
-沒有。
+No.
 
-## 24. 你最喜歡的節目是什麼？
+## 24. What was your favorite show?
 
-沒有特別追什麼。
+Nothing I followed in particular.
 
-## 25. 今年你讀的最好的書是什麼？
+## 25. What was the best book you read this year?
 
-沒有讀完整的書，時間都碎片化了。
+I didn't finish a single book. All my time was fragmented.
 
-## 26. 今年你最大的音樂發現是什麼？
+## 26. What was your biggest musical discovery this year?
 
-無。
+None.
 
-## 27. 你最喜歡的電影是哪部？
+## 27. What was your favorite movie?
 
-沒什麼印象。
+Nothing memorable.
 
-## 28. 你最喜歡的一餐是什麼？
+## 28. What was your favorite meal?
 
-忘了，這一年吃飯都是趕時間。
+Can't remember. Every meal this year was rushed.
 
-## 29. 你想要什麼並且得到了？
+## 29. What did you want and get?
 
-全遠端工作。
+Fully remote work.
 
-## 30. 你想要什麼但沒有得到？
+## 30. What did you want and not get?
 
-出國旅行。去年去了日本，今年哪裡都沒去。
+Traveling abroad. Last year we went to Japan; this year we went nowhere.
 
-## 31. 你生日那天做了什麼？
+## 31. What did you do on your birthday?
 
-跟家人簡單吃了頓飯。
+Had a simple meal with my family.
 
-## 32. 有什麼一件事如果發生，會讓你的一年更加滿意？
+## 32. What one thing would have made your year more satisfying?
 
-如果年初就找到遠端工作，就不用搬去台北再搬回來了。
+If I'd found a remote job at the start of the year, I wouldn't have had to move to Taipei and then move back.
 
-## 33. 你今年的個人時尚風格是怎樣的？
+## 33. What was your personal fashion style this year?
 
-跟去年一樣，舒適簡便。
+Same as last year -- comfort and simplicity.
 
-## 34. 是什麼讓你保持理智？
+## 34. What kept you sane?
 
-六角家教班認識的朋友們，還有那群不錯的前端同事。在一間沒什麼制度的公司裡，同事之間的互相支持反而更重要。
+The friends I made through HexSchool's tutoring program, and that group of great frontend colleagues. In a company with barely any structure, mutual support among coworkers mattered even more.
 
-## 35. 你最欣賞哪位名人 / 公眾人物？
+## 35. Which celebrity/public figure do you admire most?
 
-沒有特別關注。
+No one in particular.
 
-## 36. 什麼政治議題讓你最激動？
+## 36. What political issue stirred you up the most?
 
-沒有。今年對政治的關注度降到最低。
+None. My attention to politics hit an all-time low this year.
 
-## 37. 你最掛念的人是誰？
+## 37. Who did you miss the most?
 
-妻與子。
+My wife and son.
 
-## 38. 今年你認識的最好的新朋友是誰？
+## 38. Who was the best new person you met this year?
 
-那群前端同事和六角家教班的夥伴們。
+Those frontend colleagues and the people from HexSchool's tutoring program.
 
-## 39. 今年你學到的最寶貴的人生課程是什麼？
+## 39. What was the most valuable life lesson you learned this year?
 
-跟去年類似：很多事情的難度遠超預期，但只要撐過去，回頭看其實也就那樣。上半年覺得通勤快要把人逼瘋，下半年回到遠端後，那段日子反而變成一個還不錯的故事。
+Similar to last year: many things are far harder than expected, but if you push through, looking back it's really not that bad. In the first half of the year, commuting felt like it was driving me insane. After going back to remote in the second half, that period turned into a decent story in hindsight.
 
-## 40. 有什麼名言概括了你的這一年？
+## 40. What quote sums up your year?
 
-「先求有，再求好」——上半年先求生存，下半年才開始慢慢回到軌道上。
+"Done is better than perfect" -- the first half of the year was about survival; the second half was about slowly getting back on track.
