--- a/i18n/ja/docusaurus-plugin-content-blog/2023/07-22.md
+++ b/i18n/ja/docusaurus-plugin-content-blog/2023/07-22.md
@@ -1,89 +1,86 @@
 ---
 slug: hex-school-node
-title: 'HexSchool Node.js 企業專班'
-author: Pitt Wu
-author_title: Frontend Engineer
-author_url: https://github.com/wuzhe0912
-author_image_url: https://raw.githubusercontent.com/wuzhe0912/image-save/master/personal/me-2019-5-2.3u8s3z57t4g0.webp
+title: 'HexSchool Node.js 企業専門クラス'
+authors: wuzhe0912
 tags: [Node.js]
 ---
 
-完成 HexSchool Node.js 企業專班後，一些粗淺的想法與反思。
+HexSchool（台湾のコーディングブートキャンプ）の Node.js 企業専門クラスを修了して、いくつか思ったことや振り返りを書いてみる。
 
 <!--truncate-->
 
-## 為什麼選擇這門課程？解決什麼問題？
+## なぜこのコースを選んだのか？何を解決したかったのか？
 
-這是一門價格不菲的課程，同時考慮到六角的屬性(基於商業考量，無法把報名者拒之門外)，因此只能將課程內容設計為偏簡單。
+これはかなり高額なコースだ。しかも HexSchool の性質上（ビジネス的な理由で受講者を断れない）、カリキュラムの内容はどうしても初心者寄りの設計にならざるを得ない。
 
-從這些條件來看，報名這門課程似乎很不划算，但實務上還是可以考慮以下面向：
+こういった条件を考えると、コスパは悪そうに見えるけど、実際にはこんなメリットがある：
 
-### 團隊合作
+### チーム開発の経験
 
-因為課程從一開始就必需分組合作開發，考慮到報名者多是前端出身，大多沒有後端實作經驗，所以對我們而言可以練習後端開發之間的溝通與推進。
+コースの最初からグループ開発が必須になっている。受講者のほとんどはフロントエンド出身でバックエンドの実務経験がないので、バックエンド開発におけるコミュニケーションや進め方を練習する良い機会になる。
 
-從另一個面向講，這些合作的夥伴，未來彼此之間也能互相幫忙，算是一種替彼此建立人脈資源的方式。
+別の見方をすれば、一緒に開発した仲間は将来お互いに助け合える関係になるし、人脈を広げるという意味でも悪くない。
 
-### 沉沒成本
+### サンクコスト効果
 
-如前述所說，這是一門蠻貴的課程，即使你是懶人如我，如果不希望直接虧損掉這筆錢，必然要在下班時花費心力去追專案進度，力求在 deadline 前完成專案，這樣才能保證不虧損，某種程度上也幫助你達到自律的目標。
+前述の通り、けっこう高いコースなので、僕みたいな怠け者でも「このお金を無駄にしたくない」と思えば、仕事終わりに頑張ってプロジェクトを進めざるを得ない。deadline までにプロジェクトを完成させて元を取る――ある意味、自律を促す仕組みとも言える。
 
-### 新的視角
+### 新しい視点
 
-因為整個專案是從設計發想到開發一條龍完成，雖然客觀來說整體內容是蠻粗淺的，但還是可以讓所有成員實際跑過一遍 PM, UI/UX, 前端, 後端的流程，對於未來的工作也能有一些新的視角。
+プロジェクト全体を企画からデザイン、開発まで一気通貫でやるので、客観的に見れば内容は浅めだけど、全メンバーが PM、UI/UX、フロントエンド、バックエンドのフローを一通り経験できる。将来の仕事に対して新しい視点が得られるのは確かだ。
 
-## 課程內容
+## コース内容
 
-課程內容的部分，扣除基本的 `MongoDB` 指令操作還有 `Node.js` 的 `API` 實作，較有價值的部分，個人認為會是三方服務相關的串接，像是三方登入與金流等，畢竟這部分比較死板，需要花時間查閱對方的文件，才能完成串接。有教學的話，等於是省下了查閱文件的時間。
+カリキュラムの中で、基本的な `MongoDB` のコマンド操作や `Node.js` での `API` 実装を除くと、個人的に一番価値があったのはサードパーティサービスとの連携部分だと思う。ソーシャルログインや決済連携など、この辺りはドキュメントを読み込んで地道にやるしかない部分で、授業で教えてもらえるとドキュメント調査の時間を省ける。
 
-另外，課程內中的部分設計仍以 `MVC` 為範例，需要團隊成員在實作專案時，自己進行前後端分離，這部分也是需要花時間去思考的。
+また、コースの一部はまだ `MVC` パターンをベースに設計されていて、チームメンバーがプロジェクト実装時に自分たちでフロントエンドとバックエンドの分離を進める必要がある。ここもそれなりに考える時間が必要だった。
 
-有些課程內容算是委外請人直播教學的性質，因此可能會出現一些落差，譬如以這次的單元測試教學範例，是提供給前端的，所以這部分如果要練習後端的單元測試，還是只能仰賴團隊自己。
+一部のコース内容は外部講師によるライブ配信形式の授業で、内容にギャップが出ることもあった。例えば今回のユニットテストの授業はフロントエンド向けの内容だったので、バックエンドのユニットテストを練習したい場合はチームで自力でやるしかなかった。
 
-## 專案實作(超主觀心得)
+## プロジェクト実践（超主観的な感想）
 
-專案實作是個人認為這門課程最有價值的部分，而重中之重，則是整個團隊內部的合作與規劃。
+プロジェクト実践は、個人的にこのコースで最も価値のある部分だと思う。中でも一番大事なのは、チーム内部の協力と計画だ。
 
-### 分組前請誠實以對
+### グループ分けの前に正直に
 
-團隊分組前，會有個人能力評估，如果是不熟悉的領域，請誠實以對，否則如果團隊實力落差太大，很容易產生嚴重分歧，導致專案無法順利進行。
+チーム分けの前にスキルの自己評価がある。不慣れな領域があるなら正直に申告すべきだ。チーム内の実力差が大きすぎると深刻な対立が生まれやすく、プロジェクトがスムーズに進まなくなる。
 
-### 開發預留緩衝時間
+### 開発にはバッファ時間を確保する
 
-因為多數人是以前端身份進入後端開發，有很多以前，前端不會碰到的眉角會拖累開發速度，譬如金流串接後，必然要處理訂單問題，而訂單本身又會涉及到交易時間等問題。
+ほとんどの人がフロントエンドからバックエンド開発に入るので、以前フロントエンドでは遭遇しなかった細かい問題が開発速度を落とすことになる。例えば決済連携の後には必ず注文処理が必要になるし、注文には取引時刻の問題なども絡んでくる。
 
-這對前端來說，以前不太可能會考慮到這部分問題，畢竟都是串接 API 和列表展示與操作，但對於後端來說，這些問題都是必須要考慮到的。
+フロントエンドだと以前はこういった問題を考える必要がなかった。API を叩いてリスト表示して操作する、基本はそれだけだったから。でもバックエンドではこれらすべてを考慮しなければならない。
 
-### 以專案上線為目標
+### プロジェクトのリリースを目標にする
 
-務必請認真考慮到以下幾點
+以下の点を真剣に考えてほしい：
 
-- 團隊成員多要上班，只能投入有限時間(你無法預判團隊成員工作是否會有緊急需求壓力、加班)
-- deadline 時間非常緊迫，實際給的開發時間有限
-- 多數成員不可能有後端經驗，必然要花時間踩雷
+- メンバーのほとんどは本業があり、使える時間は限られている（メンバーが仕事で緊急対応や残業を抱えているかどうかは予測できない）
+- deadline は非常にタイトで、実際の開発時間は限られている
+- ほとんどのメンバーにバックエンド経験がなく、必ず試行錯誤に時間がかかる
 
-所以第一階段的目標，是以開發出一個堪用的作品為目標，而不是一個完美的作品，請不要在這個階段思考太多架構、優化、測試等等，這些都是後續的事情。
+だから第一段階の目標は、「使えるレベルの作品」を作ることであって、「完璧な作品」ではない。この段階でアーキテクチャや最適化、テストのことを考えすぎてはいけない。それは後の話だ。
 
-如果過度追求完美，除了會造成開發時間卡住外，更可怕的是，可能會造成團隊分裂(潛在的各種衝突，尤其是你無法判斷團隊成員是否面臨白天工作壓力)，一但團隊分裂，專案 94.87% 就瀕臨失敗了。先做出一個醜陋但能跑的功能，可以很大程度激勵彼此的信心。
+完璧を追い求めすぎると、開発が止まるだけでなく、もっと怖いのはチームが分裂する可能性があること（潜在的なさまざまな衝突、特にメンバーが昼間の仕事のプレッシャーを抱えているかどうかは分からない）。チームが分裂したら、プロジェクトは 94.87% の確率で失敗に終わる。まず見た目は悪くても動くものを作れば、お互いの自信を大きく後押しできる。
 
-尤其要避免無限擴張團隊採用的技術，以前端來說，不應該出現同時採用 `React`、`Vue` 這種雙框架的狀況，即使團隊中有人非常擅長某一個框架，但不代表其他人也能迅速學習並用於開發。
+特に、チームが採用する技術をむやみに広げるのは避けるべきだ。フロントエンドで言えば、`React` と `Vue` を同時に使うようなダブルフレームワーク構成はやめた方がいい。チームに一つのフレームワークが得意な人がいたとしても、他のメンバーがすぐに習得して開発に使えるとは限らない。
 
-### 擴充與優化
+### 拡張と最適化
 
-當專案完成第一個角色功能後，通常這時候可以理解為第一階段已吿終，除了可以喘一口氣外，還能開始思考其他功能的開發，包含一些可能你想實作的技術或優化體驗等等。
+プロジェクトで最初の主要機能が完成した段階で、第一フェーズは終了と考えていい。一息つけるだけでなく、他の機能の開発や、試してみたかった技術の導入、UX の改善などを考え始められる。
 
-以我們專案為例，就是逐步加入 `websocket` 訊息串流，`PWA`、動畫，簽到系統等，更大程度去豐富整個網站的內容。
+僕らのプロジェクトを例に挙げると、段階的に `websocket` によるメッセージストリーミング、`PWA`、アニメーション、チェックインシステムなどを追加して、サイト全体のコンテンツをより充実させていった。
 
-## 結語
+## おわりに
 
-最後附上我們本次專案實作完成的前後台部署網址與 Repo，歡迎大家參考。
+最後に、今回のプロジェクトで完成したフロント・管理画面のデプロイ URL と Repo を載せておくので、参考にしてもらえたら嬉しい。
 
-### 前台(Client)
+### フロント（Client）
 
 - [Live Host](https://true-salary-story-client.vercel.app/)
 - [Repo Link](https://github.com/North-Cat/true-salary-story-client)
 
-### 後台(Admin)
+### 管理画面（Admin）
 
 ```md
 <!-- test account & password -->
@@ -95,6 +92,6 @@ password : 12345678
 - [Live Host](https://north-cat.github.io/true-salary-story-admin/#/login)
 - [Repo Link](https://github.com/North-Cat/true-salary-story-admin)
 
-## 相關連結
+## 関連リンク
 
-[關於我成為了 2023 Node.js 軟體工程師企業專題班教練這件事](https://israynotarray.com/learnexp/20230701/2021952545/)
+[関於我成為了 2023 Node.js 軟體工程師企業專題班教練這件事](https://israynotarray.com/learnexp/20230701/2021952545/)
