--- a/i18n/ja/docusaurus-plugin-content-blog/2023/12-31.md
+++ b/i18n/ja/docusaurus-plugin-content-blog/2023/12-31.md
@@ -1,182 +1,183 @@
 ---
 slug: 2023-year-end-summary
-title: '2023 年末問自己的 40 個問題'
-author: Pitt Wu
-author_title: Frontend Engineer
-author_url: https://github.com/wuzhe0912
-author_image_url: https://raw.githubusercontent.com/wuzhe0912/image-save/master/personal/me-2019-5-2.3u8s3z57t4g0.webp
+title: '2023年の年末に自分に問いかけた40の質問'
+authors: wuzhe0912
 tags: [40-Questions, Personal Growth, Year-End Summary]
 ---
 
-## 1. 今年你做了哪些過去從未嘗試過的事？
+2023年の年末総括。自分自身に問いかけることで、この一年の成長を振り返ってみる。
 
-- 全遠端工作
-- 生育了一個孩子，從陪產到生產，最終再到產後育兒，艱辛萬分
+<!--truncate-->
 
-## 2. 你有遵守年初設定的目標嗎？
+## 1. 今年、過去にやったことのない新しいことは？
 
-- [x] 雖然沒有在工作上觸碰到後端開發，但是有在和夥伴的團隊中，以後端的身份參與開發，並且有實際的產出，算是有達成年初的目標。
-- [ ] 建立個人品牌，這個目標沒有達成，一方面是自己懶散，另一方面是下半年的時間都花在育兒上。
+- フルリモートワーク
+- 子どもが生まれた。立ち会い出産から産後の育児まで、本当に大変だった
 
-## 3. 身邊有人生孩子嗎？
+## 2. 年初に立てた目標は守れた？
 
-- 有，我們家也生了一個。
+- [x] 仕事ではバックエンド開発に触れる機会はなかったけど、仲間とのチームでバックエンド担当として開発に参加し、実際にアウトプットも出せた。年初の目標は一応達成。
+- [ ] 個人ブランドの構築。これは未達成。一つには自分の怠惰、もう一つは下半期の時間がほぼ育児に消えたから。
 
-## 4. 身邊有人過世了嗎？
+## 3. 身近に子どもが生まれた人はいた？
 
-- 沒有。
+- いた。うちにも一人生まれた。
 
-## 5. 今年你去了哪些城市/州/國家？
+## 4. 身近に亡くなった人はいた？
 
-在年末，和妻子去了日本東京旅遊。
+- いなかった。
 
-## 6. 明年你希望擁有，而今年沒有的？
+## 5. 今年はどの都市/州/国に行った？
 
-- 個人品牌，無論如何今年一定要開工嘗試做起來。
-- 減肥，雖然育兒卡掉很多時間，但為了自己的健康，這是無可迴避的事情。
+年末に妻と日本の東京に旅行した。
 
-## 7. 哪個日子將永遠刻在你的記憶裡？為什麼？
+## 6. 来年手に入れたいけど、今年は手に入らなかったものは？
 
-- 6/27，陪伴妻子生產的難熬，以及兒子的誕生。
+- 個人ブランド。何がなんでも今年こそ始める。
+- ダイエット。育児で時間が削られているけど、健康のためには避けて通れない。
 
-## 8. 今年你最大的成就是什麼？
+## 7. 永遠に記憶に残る日は？その理由は？
 
-- 上台報告自己組別的 Side Project。
-- 成為父親(即使這個痛苦遠超我的想像)。
+- 6月27日。妻の出産に立ち会った辛さと、息子の誕生。
 
-## 9. 最大的失敗是什麼？
+## 8. 今年最大の成果は？
 
-- 本來期望能穩定的全遠端工作，結果不到一年公司就開始裁員，雖然新工作很快就取得，但卻非遠端工作，不得不面臨再次搬遷回台北的問題。
+- チームの Side Project について、みんなの前で発表したこと。
+- 父親になったこと（想像をはるかに超える大変さだったけど）。
 
-## 10. 面臨了哪些困難？
+## 9. 最大の失敗は？
 
-- 遠端工作噴了，不得不重回進辦公室的工作模式。
-- 育兒時消耗掉的專注力與精神，以及佔用的時間，還有各種出行時的不便。
+- フルリモートで安定して働けると思っていたのに、一年も経たないうちに会社がリストラを始めた。新しい仕事はすぐ見つかったけど、リモートではなく、台北に引っ越さざるを得なくなった。
 
-## 11. 有生病或受傷嗎？
+## 10. どんな困難に直面した？
 
-- 一家三口先後確診。
+- リモートワークがなくなって、オフィス通勤に逆戻り。
+- 育児で集中力と体力が削られること、時間が取られること、外出時のあらゆる不便。
 
-## 12. 今年買的最好的東西是什麼？
+## 11. 病気やケガはあった？
 
-- 送給朋友們的伴手禮。
+- 家族三人が次々と感染症にかかった。
 
-## 13. 誰的行為值得慶祝？
+## 12. 今年買ったもので一番よかったのは？
 
-- 妻子的勇氣，在萬般痛苦的情況下，能夠順利生產完成。
+- 友人たちへのお土産。
 
-## 14. 誰的行為讓你感到震驚？
+## 13. 誰の行動が称賛に値した？
 
-- 當得知自己被裁員時。
+- 妻の勇気。あれほどの痛みの中で、無事に出産を終えたこと。
 
-## 15. 你的大部分錢花在哪裡？
+## 14. 誰の行動に衝撃を受けた？
+
+- 自分がリストラされたと知った時。
+
+## 15. お金の大部分は何に使った？
 
 - My son.
 
-## 16. 對什麼非常非常非常興奮？
+## 16. 何にものすごくワクワクした？
 
-- 和妻子的日本行。
+- 妻との日本旅行。
 
-## 17.有什麼歌會讓你永遠記得今年？
+## 17. 今年を思い出す曲はある？
 
-- 沒有特別 follow 什麼歌曲。
+- 特にフォローしていた曲はなかった。
 
-## 18.與去年這個時候相比，你現在是更快樂還是更悲傷？更瘦還是更胖？更富有還是更貧窮？
+## 18. 去年の今頃と比べて、今はより幸せ？より悲しい？痩せた？太った？お金は増えた？減った？
 
-- 相對來說，更抑鬱了一些，畢竟養兒這件事的困難度，遠超過我們夫妻的想像。
-- 體重沒變化，但還是得想辦法減下去。
-- 雖然今年花費高出非常多，但意料之外，年度總結時，總資產的數字還是成長了一定比例。
+- どちらかと言えば、少し憂うつ度が増した。育児の大変さが夫婦の想像をはるかに超えていたから。
+- 体重は変わらず。でもなんとか落とさないと。
+- 今年は出費がかなり増えたのに、意外なことに年末に資産を集計したら、総資産は一定の割合で増えていた。
 
-## 19. 你希望做更多的是什麼？
+## 19. もっとやりたいことは？
 
-- 穩健的提升個人專業技能，確保自己的市場競爭力。
-- 持續投資股市，參與市場。
-- 外語能力。
-- 重拾運動習慣。
+- 着実に専門スキルを向上させて、市場での競争力を確保する。
+- 引き続き株式投資を続けて、市場に参加する。
+- 外国語能力。
+- 運動習慣を取り戻す。
 
-## 20. 你希望做更少的是什麼？
+## 20. もっと減らしたいことは？
 
-- 盡量保護自己的專注力。
-- 少喝含糖飲料。
+- 自分の集中力をできるだけ守る。
+- 甘い飲み物を減らす。
 
-## 21. 你是怎麼度過假期的？
+## 21. 休暇はどう過ごした？
 
-- 國內，新北撒旦城。
-- 國外，日本東京。
+- 国内：新北のレジャー施設。
+- 海外：日本の東京。
 
-## 22. 今年你戀愛了嗎？
+## 22. 今年、恋をした？
 
-- 結婚了，自然得和妻子戀愛。
+- 結婚しているので、当然妻と恋愛中。
 
-## 23. 有任何人是今年討厭，但去年沒有的？
+## 23. 去年は嫌いじゃなかったのに、今年嫌いになった人はいる？
 
-- 這點還好。
+- 特にいない。
 
-## 24. 你最喜歡的節目是什麼？
+## 24. 一番好きだった番組は？
 
-- 《freeCodeCamp》。
-- 《渤海小吏》。
+- 『freeCodeCamp』。
+- 『渤海小吏』。
 
-## 25. 今年你讀的最好的書是什麼？
+## 25. 今年読んだ本で一番よかったのは？
 
-- 《軟技能：代碼之外的生存指南》。
+- 『SOFT SKILLS ソフトウェア開発者の人生マニュアル』。
 
-## 26. 今年你最大的音樂發現是什麼？
+## 26. 今年最大の音楽の発見は？
 
-- 發現伍佰有些歌的歌詞，相當有意涵。
+- 伍佰（台湾のミュージシャン）の一部の曲の歌詞が、かなり深い意味を持っていることに気づいた。
 
-## 27. 你最喜歡的電影是哪部？
+## 27. 一番好きだった映画は？
 
-- 《蒼鷺與少年》。
+- 『君たちはどう生きるか』。
 
-## 28. 你最喜歡的一餐是什麼？
+## 28. 一番おいしかった食事は？
 
-- 九日味噌燒肉丼。
+- 九日味噌焼肉丼。
 
-## 29. 你想要什麼並且得到了？
+## 29. 欲しかったもので手に入ったものは？
 
-- 在疫情過後，能夠和妻子出國旅遊，確實達成了。
+- コロナ後に妻と海外旅行に行くこと。実現できた。
 
-## 30. 你想要什麼但沒有得到？
+## 30. 欲しかったけど手に入らなかったものは？
 
-- 希望能持續找到遠端工作，可惜暫時沒有合適的機會。
+- リモートワークを続けたかったけど、残念ながら今のところ適した機会がない。
 
-## 31. 你生日那天做了什麼？
+## 31. 誕生日には何をした？
 
-- 跟老婆孩子去簡單吃了火鍋。
+- 妻と子どもと気軽に鍋を食べに行った。
 
-## 32. 有什麼一件事如果發生，會讓你的一年更加滿意？
+## 32. もし一つだけ実現していたら、もっと満足できた一年になっていたことは？
 
-- 如果能有更多的遠端工作可供選擇，那就太好了。
+- リモートワークの選択肢がもっとあったら最高だった。
 
-## 33. 你今年的個人時尚風格是怎樣的？
+## 33. 今年の個人的なファッションスタイルは？
 
-- 走的就是舒適與簡便，吊嘎，運動短褲，白色布鞋。
+- 快適さとシンプルさ重視。タンクトップ、スポーツショートパンツ、白いスニーカー。
 
-## 34. 是什麼讓你保持理智？
+## 34. 正気を保てた理由は？
 
-- 與妻子的討論和反思。
+- 妻との話し合いと振り返り。
 
-## 35. 你最欣賞哪位名人 / 公眾人物？
+## 35. 一番尊敬する有名人/公人は？
 
 - Sam Altman
 
-## 36. 什麼政治議題讓你最激動？
+## 36. 一番関心を持った政治的な話題は？
 
-- 台灣有機會走出兩黨政治，雖然可能還有很長的路。
+- 台湾が二大政党政治から脱却できる可能性。まだまだ道のりは長いかもしれないけど。
 
-## 37. 你最掛念的人是誰？
+## 37. 一番気にかけている人は？
 
-- 妻與子。
+- 妻と息子。
 
-## 38. 今年你認識的最好的新朋友是誰？
+## 38. 今年知り合った一番いい新しい友人は？
 
 - Sherry。
 
-## 39. 今年你學到的最寶貴的人生課程是什麼？
+## 39. 今年学んだ一番貴重な人生の教訓は？
 
-- 如果要預估一件超出舒適圈的事情難易度時，即使用 5-10 倍的難度來評估也不為過，否則一但深陷其中，你才會發現自己進退兩難。
+- コンフォートゾーンの外にあることの難しさを見積もる時、5〜10倍の難易度で考えても大げさではない。そうしないと、いざ飛び込んでから進むことも退くこともできなくなる。
 
-## 40. 有什麼名言概括了你的這一年？
+## 40. 今年を一言で表す名言は？
 
-- 雖然期許自己"勇敢踏出舒適圈"，但每一步都備感艱辛，果然這就是人生。
+- 「勇気を出してコンフォートゾーンの外へ」と自分に言い聞かせてきたけど、一歩一歩が本当に辛かった。やっぱり、これが人生か。
